# application_omc

./: .gitignore  CMakeLists.txt  README.md  build.bat
docs/: 操作说明.md  网格图形显示功能说明.md  网格页面说明.md  项目结构说明.md
include/: gridwidget.h  mainwindow.h
include/controllers/: appcontroller.h
include/core/: mainwindow.h
include/utils/: logger.h  settingsmanager.h
include/widgets/: gridwidget.h
shell/: build_en_force.bat
src/: gridwidget.cpp  mainwindow.cpp
src/controllers/: appcontroller.cpp
src/core/: mainwindow.cpp
src/utils/: logger.cpp  settingsmanager.cpp
src/widgets/: gridwidget.cpp
